<resources>
    <string name="app_name">Currency</string>
    <string name="error_msg">No internet connection!</string>
    <string name="content_description_flag">Flag thumbnail</string>
    <string name="app_detail_name">Currency Detail</string>
    <string name="error_message">Check internet connection!</string>
    <string name="action_settings">Settings</string>

    <string name="pref_currencies_key">key_currencies</string>
    <string name="pref_currencies_label">Add More</string>

    <!-- - - - - - - - - - - -->
    <!--Used by Preferences  -->
    <!-- - - - - - - - - - - -->

    <!-- Default monthly investment amount for currency preference -->
    <string name="pref_monthly_inv_default" translatable="false">1000</string>

    <!-- Key name for storing monthly investment in SharedPreferences -->
    <string name="pref_monthly_inv_key" translatable="false">monthly_inv</string>

    <!-- Label for the monthly investment preference -->
    <string name="pref_monthly_inv_label">Monthly Investment</string>

    <string name="pref_history_min_default" translatable="false">55</string>
    <string name="pref_history_max_default" translatable="false">65</string>

    <string name="pref_history_min_key" translatable="false">history_min</string>
    <string name="pref_history_max_key" translatable="false">history_max</string>

    <string name="pref_history_min_label">Historical Min</string>
    <string name="pref_history_max_label">Historical Max</string>

</resources>
