<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_monthly_inv_default"
        android:inputType="numberDecimal"
        android:key="@string/pref_monthly_inv_key"
        android:singleLine="true"
        android:title="@string/pref_monthly_inv_label" />

    <EditTextPreference
        android:defaultValue="@string/pref_history_min_default"
        android:inputType="numberDecimal"
        android:key="@string/pref_history_min_key"
        android:singleLine="true"
        android:title="@string/pref_history_min_label" />

    <EditTextPreference
        android:defaultValue="@string/pref_history_max_default"
        android:inputType="numberDecimal"
        android:key="@string/pref_history_max_key"
        android:singleLine="true"
        android:title="@string/pref_history_max_label" />

</PreferenceScreen>